--- a/Pipfile
+++ b/Pipfile
@@ -63,11 +63,11 @@ vine = "==1.1.4"
 whitenoise = "==4.0"
 Cycler = "==0.10.0"
 Cython = "==0.28.4"
-Django = "==2.2"
 Markdown = "==2.6.11"
 Pillow = "==6.2.2"
 PyMySQL = "==0.9.2"
 Werkzeug = "==0.15.3"
+django = "==2.2.13"
 
 [requires]
 python_version = "3.6"
