--- a/Pipfile
+++ b/Pipfile
@@ -68,6 +68,7 @@ Pillow = "==6.2.2"
 PyMySQL = "==0.9.2"
 Werkzeug = "==0.15.3"
 django = "==2.2.13"
+django-environ = "*"
 
 [requires]
 python_version = "3.6"
